syntax = "proto3";

package guard;

option go_package = "./internal/ports/grpc";

service Guard {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (EmptyResponse) {}
    rpc Check(CheckRequest) returns (CheckResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
}

message LogoutRequest {
    string accessToken = 1;
}

message EmptyResponse {}

message CheckRequest {
    string accessToken = 1;
}

message CheckResponse {
    bool valid = 1;
    string userID = 2;
}
